# haskell-common

./: .gitignore  .travis.yml  common.cabal  stack.yaml
src/: Math.hs
src/Common/: Math.hs
test/: Spec.hs
