name:                common
version:             0.1.0.0
synopsis:            Common general-purpose code.
description:         Please see README.md
homepage:            http://github.com/hawkw/haskell-common
license:             MIT
license-file:        LICENSE
author:              Hawk Weisman
maintainer:          hi@hawkweisman.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common.Math
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite common-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , common
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: http://github.com/hawkw/haskell-common
